--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,13 @@ body {
     font-family: BebasNeue;
     font-size: 150px;
 }
+
+#titles p {
+    margin-bottom: 2px;
+    margin-top: 5px;
+}
+
+video {
+    width: 100%;
+    height: auto;
+}
