--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,8 @@ body {
 #about {
     background-color: darkslategrey;
     overflow: hidden;
-    margin-top: -10px;
-    padding-top: -10px;
-    width:100%;
+    padding: 0;
+    margin: 0;
 }
 
 #about h1 {
@@ -110,55 +109,4 @@ video {
     font-size: 24px;
     word-wrap: break-word;
     width: 50%;
-}
-
-#education {
-    background-color: #436b6b;
-    width:100%;
-}
-
-#education h1 {
-    font-family: BebasNeue;
-    font-size: 100px;
-    color: whitesmoke;
-    margin-left: 100px;
-    margin-bottom: 15px;
-    margin-top: 0;
-}
-
-#educationText {
-    color: whitesmoke;
-    font-family: Assistant;
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: 24px;
-    word-wrap: break-word;
-}
-
-#cards {
-    margin: 0 auto;
-    display: flex;
-    padding-bottom: 20px;
-}
-
-.card {
-    display: inline;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: whitesmoke;
-    margin: 0 auto;
-    width: 25%;
-    border-radius: 5px;
-}
-
-#eduCard h1 {
-    font-family: BebasNeue;
-    font-size: 30px;
-    color: black;
-    margin-left: 15px;
-    margin-top: 10px;
-}
-
-#eduCard p {
-    margin-left: 15px;
-    font-family: Assistant;
 }
