--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,13 @@
     src: url(../fonts/Assistant-VariableFont_wght.ttf);
 }
 
-body {
+html, body {
     background-color: lightblue;
-    padding: 0;
-    margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .header {
@@ -146,7 +149,7 @@ video {
 
 #cards {
     margin: 0 auto;
-    display: flex;
+    display: inline-flex;
     padding-bottom: 20px;
 }
 
