--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html, body {
     margin-left: 10px;
     margin-right: 10px;
     font-family: BebasNeue;
-    font-size: 24px;
+    font-size: 2em;
     display: block;
     padding: 8px;
     background-color: whitesmoke;
@@ -134,6 +134,7 @@ video {
     color: whitesmoke;
     font-family: Assistant;
     margin-left: 100px;
+    margin-right: 100px;
     width: 100%;
     float: left;
 }
