--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,7 @@ h3 {
     padding-left: 5.2%;
     padding-right: 5.2%;
     padding-top: 15px;
+    padding-bottom: 1%;
 }
 
 #graffitiContents iframe {
@@ -266,7 +267,7 @@ h3 {
     padding-left: 5.2%;
     padding-right: 5.2%;
     padding-top: 15px;
-    margin-bottom: 8%;
+    margin-bottom: 5%;
 }
 
 #caffeineContents iframe {
@@ -279,4 +280,38 @@ h3 {
     margin-left: 2%;
     aspect-ratio: 16 / 9;
     position: static;
+}
+
+.slideshow-container {
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 20.2%;
+    margin-right: 5.2%;
+    margin-top: 3%;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    margin: auto;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
 }
