--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,22 @@ h3 {
     margin-top: 3%;
 }
 
+.slideshow-container2 {
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 20.2%;
+    margin-right: 5.2%;
+    margin-top: 3%;
+}
+
+.slideshow-container3 {
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 20.2%;
+    margin-right: 5.2%;
+    margin-top: 3%;
+}
+
 /* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
