--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ h3 {
 }
 
 #contact {
-    background-color: darkslategrey;
+    background-color: #436b6b;
     width: 100%;
     padding-left: 5.2%;
     padding-right: 5.2%;
